--- a/package.json
+++ b/package.json
@@ -1,14 +1,36 @@
 {
-  "name": "nextjs-16-frontend-starter",
+  "name": "nextjs-frontend-starter",
   "version": "0.1.0",
   "private": true,
+  "author": {
+    "name": "Diwash Bhattarai",
+    "email": "diwashb999@gmail.com"
+  },
+  "keywords": [
+    "nextjs",
+    "frontend",
+    "template",
+    "react",
+    "typescript",
+    "biome",
+    "ultracite",
+    "lefthook"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/diwashbhattarai999/nextjs-frontend-template.git"
+  },
+  "license": "MIT",
+  "type": "module",
   "scripts": {
+    "clean": "rm -rf .next playwright-report test-results",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint:check": "ultracite check",
     "lint:fix": "ultracite fix",
-    "prepare": "lefthook install"
+    "prepare": "lefthook install",
+    "type-check": "tsc -b"
   },
   "dependencies": {
     "@base-ui/react": "^1.1.0",
@@ -27,6 +49,9 @@
   },
   "devDependencies": {
     "@biomejs/biome": "2.3.13",
+    "@commitlint/cli": "^20.4.1",
+    "@commitlint/config-conventional": "^20.4.1",
+    "@commitlint/types": "^20.4.0",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
