--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "clsx": "^2.1.1",
     "next": "16.1.6",
     "next-themes": "^0.4.6",
+    "nextjs-toploader": "^3.9.17",
+    "nuqs": "^2.8.8",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "shadcn": "^3.8.4",
