--- a/package.json
+++ b/package.json
@@ -34,10 +34,13 @@
   },
   "dependencies": {
     "@base-ui/react": "^1.1.0",
+    "@t3-oss/env-nextjs": "^0.13.10",
     "@tabler/icons-react": "^3.36.1",
     "@tanstack/react-query": "^5.90.20",
+    "axios": "^1.13.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "js-cookie": "^3.0.5",
     "next": "16.1.6",
     "next-themes": "^0.4.6",
     "nextjs-toploader": "^3.9.17",
@@ -47,7 +50,8 @@
     "shadcn": "^3.8.4",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
-    "tw-animate-css": "^1.4.0"
+    "tw-animate-css": "^1.4.0",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@biomejs/biome": "2.3.13",
@@ -55,6 +59,7 @@
     "@commitlint/config-conventional": "^20.4.1",
     "@commitlint/types": "^20.4.0",
     "@tailwindcss/postcss": "^4",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
