--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@commitlint/config-conventional": "^20.4.1",
     "@commitlint/types": "^20.4.0",
     "@tailwindcss/postcss": "^4",
+    "@tanstack/react-query-devtools": "^5.91.3",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^19",
