--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "clsx": "^2.1.1",
     "js-cookie": "^3.0.5",
     "next": "16.1.6",
+    "next-intl": "^4.8.2",
     "next-themes": "^0.4.6",
     "nextjs-toploader": "^3.9.17",
     "nuqs": "^2.8.8",
