--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "license": "MIT",
   "type": "module",
+  "packageManager": "pnpm@10.27.0",
   "scripts": {
     "clean": "rm -rf .next playwright-report test-results",
     "dev": "next dev",
